Footer link alignment Fixed

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -380,6 +380,7 @@ a {
 .footer .left > .wrapper {
     display: flex;
     flex-direction: column;
+    align-items: start;
 }
 
 .footer .left .address .link {
